[package]
name = "vbios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
opt-level = "z"

[workspace]
members = [
  "mock_input",
  "mock_insttool64"
]

[dependencies]
miniz_oxide = "0.6.2"
