[package]
name = "vbios"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
strip = true
lto = true
opt-level = "z"

[workspace]
members = [
  "mock_input",
  "mock_insttool64"
]

[dependencies]
flate2 = "1.0"
